# demo-dev-container

./: Dockerfile  Makefile  README.md  inspect.py  pyproject.toml
.devcontainer/: devcontainer.json
core/: const.py
services/service_x/: Dockerfile  Makefile  fastapi_app.py  pyproject.toml
services/service_x/.devcontainer/: devcontainer.json
