[tool.poetry]
name = "demotools"
version = "0.1.0"
description = ""
authors = ["NhanDD3 <hp.duongducnhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
fastapi = "^0.111.0"
requests = "^2.32.3"
uvicorn = {extras = ["standard"], version = "^0.30.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
